cmake_minimum_required(VERSION 3.0)

project(advent_of_code_2022 CXX)
set(CMAKE_CXX_STANDARD 17)

#define input directory for all targets
add_compile_definitions(INPUT_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/input/")

add_executable(1-1 1-1.cpp)
add_executable(1-2 1-2.cpp)
add_executable(2-1 2-1.cpp)
add_executable(2-2 2-2.cpp)
add_executable(3-1 3-1.cpp)
add_executable(3-2 3-2.cpp)
add_executable(4-1 4-1.cpp)
add_executable(4-2 4-2.cpp)
add_executable(5-1 5-1.cpp)
add_executable(5-2 5-2.cpp)
add_executable(6-1 6-1.cpp)
add_executable(6-2 6-2.cpp)
add_executable(7-1 7.hpp 7-1.cpp)
add_executable(7-2 7.hpp 7-2.cpp)
add_executable(8-1 8-1.cpp)
add_executable(8-2 8-2.cpp)
add_executable(9-1 9.hpp 9-1.cpp)
add_executable(9-2 9.hpp 9-2.cpp)
add_executable(10-1 10-1.cpp)
add_executable(10-2 10-2.cpp)
add_executable(11-1 11.hpp 11-1.cpp)
add_executable(11-2 11.hpp 11-2.cpp)
add_executable(12-1 12.hpp 12-1.cpp)
add_executable(12-2 12.hpp 12-2.cpp)
add_executable(13-1 13.hpp 13-1.cpp)
add_executable(13-2 13.hpp 13-2.cpp)
add_executable(14-1 14.hpp 14-1.cpp)
add_executable(14-2 14.hpp 14-2.cpp)