cmake_minimum_required(VERSION 3.0)

project(advent_of_code_2022 CXX)

set(CMAKE_CXX_STANDARD 17)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_compile_definitions(INPUT_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/input/")

add_executable(01-1 01-1.cpp)
add_executable(01-2 01-2.cpp)
add_executable(02-1 02-1.cpp)
add_executable(02-2 02-2.cpp)
add_executable(03-1 03-1.cpp)
add_executable(03-2 03-2.cpp)
add_executable(04-1 04-1.cpp)
add_executable(04-2 04-2.cpp)
add_executable(05-1 05-1.cpp)
add_executable(05-2 05-2.cpp)
add_executable(06-1 06-1.cpp)
add_executable(06-2 06-2.cpp)
add_executable(07-1 07.hpp 07-1.cpp)
add_executable(07-2 07.hpp 07-2.cpp)
add_executable(08-1 08-1.cpp)
add_executable(08-2 08-2.cpp)
add_executable(09-1 09.hpp 09-1.cpp)
add_executable(09-2 09.hpp 09-2.cpp)
add_executable(10-1 10-1.cpp)
add_executable(10-2 10-2.cpp)
add_executable(11-1 11.hpp 11-1.cpp)
add_executable(11-2 11.hpp 11-2.cpp)
add_executable(12-1 12.hpp 12-1.cpp)
add_executable(12-2 12.hpp 12-2.cpp)
add_executable(13-1 13.hpp 13-1.cpp)
add_executable(13-2 13.hpp 13-2.cpp)
add_executable(14-1 14.hpp 14-1.cpp)
add_executable(14-2 14.hpp 14-2.cpp)
add_executable(15-1 15.hpp 15-1.cpp)
add_executable(15-2 15.hpp 15-2.cpp)
add_executable(16-1 16.hpp 16-1.cpp)
add_executable(16-2 16.hpp 16-2.cpp)