add_compile_definitions(INPUT_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/input/")

add_executable(2024_01-1 01-1.cpp)
add_executable(2024_01-2 01-2.cpp)
add_executable(2024_02-1 02-1.cpp)
add_executable(2024_02-2 02-2.cpp)
add_executable(2024_03-1 03-1.cpp)
add_executable(2024_03-2 03-2.cpp)
add_executable(2024_04-1 04-1.cpp)
add_executable(2024_04-2 04-2.cpp)
add_executable(2024_05-1 05-1.cpp)
add_executable(2024_05-2 05-2.cpp)